--- a/app/views/organisations/edit.html.erb
+++ b/app/views/organisations/edit.html.erb
@@ -1,24 +1,21 @@
-<%= render 'common/header' %>
-<h1>Edit Organisation</h1>
-
-<%= form_with(model: @organisation, local: true) do |form| %>
+<h2> Edit Organisation </h2>
+<%= form_with model: @organisation, local: true do |f| %>
+    <% if @organisation.errors.any? %>
+        <div class="error_messages">
+            <h3 fontColor="red">Form is invalid</h3>
+            <ul>
+                <% for message in @organisation.errors.full_messages %>
+                    <li><%= message %></li>
+                <% end %>
+            </ul>
+        </div>
+    <% end %>
     <p>
-    <%= form.label :org_name %>
-    <%= form.text_field :org_name %>
+        <%= f.label :"Name:" %>
+        <%= f.text_field :name %><br />
+        <%= f.label :"Hourly rate: $" %>
+        <%= f.number_field :hourly_rate, step: :any%> per hour<br />
     </p>
- 
-    <p>
-    <%= form.label :hourly_rate %>
-    <%= form.text_field :hourly_rate %>
-    </p>
-
-    <p>
-    <%= form.submit %>
-    </p>
-<% end %>
-
-
-<div><%= link_to 'Delete', organisation_path(@organisation),
-      method: :delete,
-      data: {confirm: 'are you sure?'} =%><div>
-<div><%= link_to 'Back', organisation_path %></div>
+    <p class="button"><%= f.submit "Update" %></p>
+<%end%>
+<%= link_to "Delete", organisation_path(id: @organisation.id), :method => :delete, data: {confirm: "Are you sure?"} %>
